--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/pulse": "^1.2",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-permission": "^6.7",
+        "yajra/laravel-datatables": "^11.0",
+        "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
